<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <FrameLayout
        android:id="@+id/shipped_logo_layout"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/shipped_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:scaleType="centerInside"
            android:src="@drawable/shield_logo" />
    </FrameLayout>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shipped_logo_layout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/shipped_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="24dp"
                android:background="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/shipped_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:gravity="center"
                    android:text="@string/learn_more_title_shield"
                    android:textColor="#000000"
                    android:textFontWeight="700"
                    android:textSize="28sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/shipped_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="24dp"
                    android:gravity="center"
                    android:lineSpacingExtra="2dp"
                    android:paddingHorizontal="16dp"
                    android:text="@string/learn_more_subtitle_shield"
                    android:textColor="#000000"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/shipped_title" />

                <ImageView
                    android:id="@+id/tip_tick_one"
                    android:layout_width="15dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="32dp"
                    app:layout_constraintEnd_toStartOf="@+id/shipped_tip_info_one"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/shipped_tip_info_one"
                    app:srcCompat="@drawable/tick" />

                <TextView
                    android:id="@+id/shipped_tip_info_one"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="34dp"
                    android:layout_marginEnd="32dp"
                    android:gravity="center_vertical"
                    android:text="@string/shipped_default_tip_0"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tip_tick_one"
                    app:layout_constraintTop_toBottomOf="@id/shipped_subtitle" />

                <ImageView
                    android:id="@+id/tip_tick_two"
                    android:layout_width="15dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="32dp"
                    app:layout_constraintEnd_toStartOf="@+id/shipped_tip_info_two"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/shipped_tip_info_two"
                    app:srcCompat="@drawable/tick" />

                <TextView
                    android:id="@+id/shipped_tip_info_two"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="32dp"
                    android:gravity="center_vertical"
                    android:text="@string/shipped_default_tip_1"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tip_tick_two"
                    app:layout_constraintTop_toBottomOf="@id/shipped_tip_info_one" />

                <ImageView
                    android:id="@+id/tip_tick_three"
                    android:layout_width="15dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="32dp"
                    app:layout_constraintEnd_toStartOf="@+id/shipped_tip_info_three"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/shipped_tip_info_three"
                    app:srcCompat="@drawable/tick" />

                <TextView
                    android:id="@+id/shipped_tip_info_three"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="32dp"
                    android:gravity="top"
                    android:text="@string/shipped_default_tip_2"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tip_tick_three"
                    app:layout_constraintTop_toBottomOf="@id/shipped_tip_info_two" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:scaleType="centerCrop"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shipped_header"
                app:layout_constraintBottom_toTopOf="@id/shipped_bottom"
                app:srcCompat="@drawable/green_banner" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/shipped_bottom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#F4F4F5"
                android:padding="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/banner">

                <TextView
                    android:id="@+id/shipped_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="18dp"
                    android:gravity="center"
                    android:lineSpacingExtra="2dp"
                    android:text="@string/shipped_tip_message"
                    android:textColor="#993C3C43"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toTopOf="@+id/shipped_done"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/shipped_done"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/shipped_button_solid"
                    android:gravity="center"
                    android:text="@string/shipped_got_it"
                    android:textColor="#000000"
                    android:textFontWeight="600"
                    android:textSize="17sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>